k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internet-speeds-frontend
  namespace: internet-speeds
  labels:
    app: internet-speeds
    use: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internet-speeds
      use: frontend
  template:
    metadata:
      labels:
        app: internet-speeds
        use: frontend
    spec:
      containers:
      - name: internet-speeds-frontend
        image: seppler/internet-speeds-nginx:1.0.0
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: graphs
          mountPath: /usr/share/nginx/html/internet-speeds/graphs
          readOnly: True
      volumes:
      - name: graphs
        persistentVolumeClaim:
          claimName: internet-speeds-graphs
